# workshop_rag_rmutl

./: .env  .env.example  .gitignore  README.md  app.py  app_docs.py  app_upload.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: 00_simple_chatbot_demo.ipynb  01_introduction_to_rag_langchain.ipynb  02_data_ingestion_vector_store.ipynb  03_build_rag_pipeline.ipynb  04_streamlit_ui.ipynb  05_wrapup_advanced_topics.ipynb
